# py-perceptron

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyicore.py  pypcore.py  pyproject.toml
src/perceptron/: __init__.py  pyicore.py  pypcore.py
